--- a/themes/hexo-theme-3-hexo-master/layout/_partial/dashang.ejs
+++ b/themes/hexo-theme-3-hexo-master/layout/_partial/dashang.ejs
@@ -2,7 +2,7 @@
 <div class="shang_box">
     <a class="shang_close"  onclick="dashangToggle()">×</a>
     <div class="shang_tit">
-        <p>喜欢就点赞,疼爱就打赏</p>
+        <p>赏赐大米是对我鼓励的最好方式呢~</p>
     </div>
     <div class="shang_payimg">
         <div class="pay_img">
